# hermite

./: LICENSE  README.md  hermite.cabal  main.hs
src/: Main.hs  gdk_get_xid.c
src/System/: Hermite.hs
src/System/Hermite/: Keys.hs  Settings.hs  Simple.hs  SimpleKeys.hs  Tabs.hs  ViKeys.hs
src/System/Termutils/: Colors.hs  Movement.hs  Search.hs  Url.hs  Xid.hs
